--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "nuxt-healthcheck",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/module.js",
   "repository": "https://github.com/fukuiretu/nuxt-healthcheck",
   "author": "fukuiretu <fukuiretu@gmail.com>",
   "license": "MIT",
-  "private": null,
   "devDependencies": {
     "babel-eslint": "^8.2.5",
     "eslint": "^5.0.1",
@@ -18,5 +17,9 @@
     "prettier": "^1.13.6",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
+  },
+  "scripts": {
+    "format": "prettier-eslint --write \"./**/*.js\" --ignore \"./node_modules/**\" ",
+    "lint": "eslint --ext .js --ignore-path .gitignore ."
   }
 }
